--- a/TM_EB_full.html
+++ b/TM_EB_full.html
@@ -3,7 +3,7 @@
 <h1 solid #ccc; padding-bottom:10px;">
 <img src="img/icon_league_1.png" style="height:58px; vertical-align:middle; margin-right:6px;">
 통통배 난이도 패턴</h1>
-<hr><h2><span style='color:#d24dff'>[지] VS 캐럿</span></h2>
+<hr><h2><span style='color:#d24dff'>[지] VS 티치</span></h2>
 <html>
 <head>
 <meta charset="UTF-8">
@@ -32,15 +32,16 @@
 <div class="icon-line"><img src="img/common_run.png">도주</div>
 <br>
 <h3>Stage 3:</h3>
-<span class="label-initial" style="color:#87cefa">초기 상태: 캐럿</span><br>
-<div class="icon-line"><img src="img/common_weak_07.png">약점 타입: 박식형</div>
+<span class="label-initial" style="color:#87cefa">초기 상태: 마샬 D. 티치</span><br>
+<div class="icon-line"><img src="img/common_weak_01.png">약점 타입: 격투형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">1턴 동안 받는 데미지를 50% 감소</div>
+<div class="icon-line"><img src="img/popuptext_slot_negative.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [불리] 슬롯으로 변환</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">98턴 동안 일반 공격 이외의 데미지 1</div>
 <div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">98턴 동안 상태이상 무효</div>
+<div class="icon-line"><img src="img/state_icon_invincible.png">1턴 동안 받는 데미지 무효</div>
 <br>
 </body></html>
-<hr><h2><span style='color:#ffaa00'>[심] VS 울티</span></h2>
+<hr><h2><span style='color:#4d9aff'>[속] VS 알비다&코비</span></h2>
 <html>
 <head>
 <meta charset="UTF-8">
@@ -63,58 +64,22 @@
        <h1></h1>
 <h3>Stage 1:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/characterbox_icon_vs.png">격투형, 참격형, 사격형 캐릭터의 VS 효과의 게이지를 5 단축</div>
-<div class="icon-line"><img src="img/common_change_charge.png">격투형, 참격형, 사격형 캐릭터의 슈퍼 체인지 효과를 5 단축</div>
-<div class="icon-line"><img src="img/common_special_charge.png">격투형, 참격형, 사격형 캐릭터의 필살기 턴을 5턴 단축</div>
+<div class="icon-line"><img src="img/characterbox_icon_vs.png">격투형, 타격형, 자유형 캐릭터의 VS 효과의 게이지를 5 단축</div>
+<div class="icon-line"><img src="img/common_change_charge.png">격투형, 타격형, 자유형 캐릭터의 슈퍼 체인지 효과를 5 단축</div>
+<div class="icon-line"><img src="img/common_special_charge.png">격투형, 타격형, 자유형 캐릭터의 필살기 턴을 5턴 단축</div>
 <div class="icon-line"><img src="img/common_run.png">도주</div>
 <br>
 <h3>Stage 3:</h3>
-<span class="label-initial" style="color:#87cefa">초기 상태: 울티</span><br>
-<div class="icon-line"><img src="img/common_weak_04.png">약점 타입: 사격형</div>
-<span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_bind.png">3턴 동안 좌측 봉쇄</div>
-<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">98턴 동안 일반 공격 이외의 데미지 1</div>
-<br>
-</body></html>
-<hr><h2><span style='color:#228B22'>[기] VS 페로나</span></h2>
-<html>
-<head>
-<meta charset="UTF-8">
-<style>
-  body { background-color: #13514d; color: #f2f2f7; font-family: sans-serif; padding: 2em; font-size: 26px; }
-  img { height: 40px; vertical-align: middle; margin-right: 2px; }
-  h1 { font-size: 36px; color: gold; margin-bottom: 0.3em; }
-  h2 { solid #f2f2f7; padding-bottom: 0.3em; font-size: 30px; }
-  h3 { font-size: 28px; margin-top: 1em; }
-  .icon-line { display: flex; align-items: center; gap: 6px; margin-bottom: 4px; font-size: 24px; }
-  .label-initial { background-color: #267d4a; color: #f2f2f7; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
-  .label-preemptive { background-color: #24567a; color: #f2f2f7; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
-  .label-special { background-color: #aa8500; color: #fff; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
-  .label-death { background-color: #b71c1c; color: #fff; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
-  .label-interrupt { background-color: #6a1b9a; color: #fff; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
-  .label-after1turn { background-color: #6a1b9a; color: #fff; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
-</style>
-</head>
-<body>
-       <h1></h1>
-<h3>Stage 1:</h3>
-<span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/characterbox_icon_vs.png">힘 속성, 기 속성, 속 속성 속성의 VS 효과의 게이지를 5 단축</div>
-<div class="icon-line"><img src="img/common_change_charge.png">힘 속성, 기 속성, 속 속성 속성의 슈퍼 체인지 효과를 5 단축</div>
-<div class="icon-line"><img src="img/common_special_charge.png">힘 속성, 기 속성, 속 속성 캐릭터의 필살기 턴을 5턴 단축</div>
-<div class="icon-line"><img src="img/common_run.png">도주</div>
-<br>
-<h3>Stage 3:</h3>
-<span class="label-initial" style="color:#87cefa">초기 상태: 페로나</span><br>
+<span class="label-initial" style="color:#87cefa">초기 상태: 알비다&코비</span><br>
 <div class="icon-line"><img src="img/common_weak_05.png">약점 타입: 자유형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_icon_210.png">98턴 동안 적의 방어력 감소 이외의 상태이상 무효</div>
-<div class="icon-line"><img src="img/common_damagecut_icon.png">1턴 동안 1000을(를) 넘는 데미지를 90% 감소</div>
-<div class="icon-line"><img src="img/common_icon_deffence_up.png">3턴 동안 방어력 1000배</div>
+<div class="icon-line"><img src="img/common_despair.png">3턴 동안 상단의 선장효과 무효</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">98턴 동안 일반 공격 이외의 데미지 1</div>
+<div class="icon-line"><img src="img/common_icon_251_skill.png">2턴 동안 3000 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
+<div class="icon-line"><img src="img/common_icon_210.png">98턴 동안 지연, 적의 방어력 감소 이외의 상태이상 무효</div>
 <br>
 </body></html>
-<hr><h2><span style='color:#ffaa00'>[심] VS 야마토&오타마</span></h2>
+<hr><h2><span style='color:#228B22'>[기] VS 도플라밍고</span></h2>
 <html>
 <head>
 <meta charset="UTF-8">
@@ -137,22 +102,22 @@
        <h1></h1>
 <h3>Stage 1:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/characterbox_icon_vs.png">자유형, 야심형, 박식형 캐릭터의 VS 효과의 게이지를 5 단축</div>
-<div class="icon-line"><img src="img/common_change_charge.png">자유형, 야심형, 박식형 캐릭터의 슈퍼 체인지 효과를 5 단축</div>
-<div class="icon-line"><img src="img/common_special_charge.png">자유형, 야심형, 박식형 캐릭터의 필살기 턴을 5턴 단축</div>
+<div class="icon-line"><img src="img/characterbox_icon_vs.png">힘 속성, 기 속성, 심 속성 속성의 VS 효과의 게이지를 5 단축</div>
+<div class="icon-line"><img src="img/common_change_charge.png">힘 속성, 기 속성, 심 속성 속성의 슈퍼 체인지 효과를 5 단축</div>
+<div class="icon-line"><img src="img/common_special_charge.png">힘 속성, 기 속성, 심 속성 캐릭터의 필살기 턴을 5턴 단축</div>
 <div class="icon-line"><img src="img/common_run.png">도주</div>
 <br>
 <h3>Stage 3:</h3>
-<span class="label-initial" style="color:#87cefa">초기 상태: 야마토&오타마</span><br>
+<span class="label-initial" style="color:#87cefa">초기 상태: 돈키호테 도플라밍고</span><br>
 <div class="icon-line"><img src="img/common_weak_07.png">약점 타입: 박식형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_despair.png">4턴 동안 상단의 선장효과 무효</div>
-<div class="icon-line"><img src="img/common_special_bind.png">2턴 동안 상단 필살기 봉쇄</div>
-<div class="icon-line"><img src="img/popuptext_slot_negative.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해][불리] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">98턴 동안 일반 공격 이외의 데미지 1</div>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_04.png">98턴 동안 방어력 감소 무효</div>
+<div class="icon-line"><img src="img/common_icon_deffence_up.png">3턴 동안 방어력 1000배</div>
 <br>
 </body></html>
-<hr><h2><span style='color:#228B22'>[기] VS 나미</span><span style='color:#228B22'> (보스) </span></h2>
+<hr><h2><span style='color:#ffaa00'>[심] VS Mr.0&미스 올 선데이</span></h2>
 <html>
 <head>
 <meta charset="UTF-8">
@@ -175,73 +140,114 @@
        <h1></h1>
 <h3>Stage 1:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/characterbox_icon_vs.png">힘 속성, 심 속성, 지 속성 속성의 VS 효과의 게이지를 5 단축</div>
-<div class="icon-line"><img src="img/common_change_charge.png">힘 속성, 심 속성, 지 속성 속성의 슈퍼 체인지 효과를 5 단축</div>
-<div class="icon-line"><img src="img/common_special_charge.png">힘 속성, 심 속성, 지 속성 캐릭터의 필살기 턴을 5턴 단축</div>
+<div class="icon-line"><img src="img/characterbox_icon_vs.png">참격형, 야심형, 박식형 캐릭터의 VS 효과의 게이지를 5 단축</div>
+<div class="icon-line"><img src="img/common_change_charge.png">참격형, 야심형, 박식형 캐릭터의 슈퍼 체인지 효과를 5 단축</div>
+<div class="icon-line"><img src="img/common_special_charge.png">참격형, 야심형, 박식형 캐릭터의 필살기 턴을 5턴 단축</div>
+<div class="icon-line"><img src="img/common_run.png">도주</div>
+<br>
+<h3>Stage 3:</h3>
+<span class="label-initial" style="color:#87cefa">초기 상태: Mr.0&미스 올 선데이</span><br>
+<div class="icon-line"><img src="img/common_weak_06.png">약점 타입: 야심형</div>
+<span class="label-preemptive">선제 행동:</span><br>
+<div class="icon-line"><img src="img/common_special_bind.png">3턴 동안 필살기 봉쇄</div>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">98턴 동안 일반 공격 이외의 데미지 1</div>
+<div class="icon-line"><img src="img/common_icon_210.png">98턴 동안 지연, 적의 방어력 감소 이외의 상태이상 무효</div>
+<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">2턴 동안 받는 데미지를 50% 감소</div>
+<br>
+</body></html>
+<hr><h2><span style='color:#4d9aff'>[속] VS 에이스</span><span style='color:#4d9aff'> (보스) </span></h2>
+<html>
+<head>
+<meta charset="UTF-8">
+<style>
+  body { background-color: #13514d; color: #f2f2f7; font-family: sans-serif; padding: 2em; font-size: 26px; }
+  img { height: 40px; vertical-align: middle; margin-right: 2px; }
+  h1 { font-size: 36px; color: gold; margin-bottom: 0.3em; }
+  h2 { solid #f2f2f7; padding-bottom: 0.3em; font-size: 30px; }
+  h3 { font-size: 28px; margin-top: 1em; }
+  .icon-line { display: flex; align-items: center; gap: 6px; margin-bottom: 4px; font-size: 24px; }
+  .label-initial { background-color: #267d4a; color: #f2f2f7; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
+  .label-preemptive { background-color: #24567a; color: #f2f2f7; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
+  .label-special { background-color: #aa8500; color: #fff; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
+  .label-death { background-color: #b71c1c; color: #fff; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
+  .label-interrupt { background-color: #6a1b9a; color: #fff; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
+  .label-after1turn { background-color: #6a1b9a; color: #fff; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
+</style>
+</head>
+<body>
+       <h1></h1>
+<h3>Stage 1:</h3>
+<span class="label-preemptive">선제 행동:</span><br>
+<div class="icon-line"><img src="img/characterbox_icon_vs.png">기 속성, 속 속성, 지 속성 속성의 VS 효과의 게이지를 5 단축</div>
+<div class="icon-line"><img src="img/common_change_charge.png">기 속성, 속 속성, 지 속성 속성의 슈퍼 체인지 효과를 5 단축</div>
+<div class="icon-line"><img src="img/common_special_charge.png">기 속성, 속 속성, 지 속성 캐릭터의 필살기 턴을 5턴 단축</div>
+<div class="icon-line"><img src="img/common_run.png">도주</div>
+<br>
+<h3>Stage 2:</h3>
+<span class="label-initial" style="color:#87cefa">초기 상태: 마르코</span><br>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">99턴 동안 일반 공격 이외의 데미지 1</div>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_04.png">99턴 동안 방어력 감소 무효</div>
+<span class="label-preemptive">선제 행동:</span><br>
+<div class="icon-line"><img src="img/common_special_bind.png">2턴 동안 필살기 봉쇄</div>
+<div class="icon-line"><img src="img/common_state_icon_attack_down.png">2턴 동안 공격력 50% 감소</div>
+<br>
+<h3>Stage 3:</h3>
+<span class="label-initial" style="color:#87cefa">초기 상태: 포트거스 D. 에이스</span><br>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">99턴 동안 일반 공격 이외의 데미지 1</div>
+<div class="icon-line"><img src="img/common_icon_mighty_guard_01.png">99턴 동안 지연 무효</div>
+<div class="icon-line"><img src="img/common_weak_01.png">약점 타입: 격투형</div>
+<span class="label-preemptive">선제 행동:</span><br>
+<div class="icon-line"><img src="img/common_bind.png">3턴 동안 상단 봉쇄</div>
+<div class="icon-line"><img src="img/popuptext_slot_negative.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [불리] 슬롯으로 변환</div>
+<div class="icon-line"><img src="img/common_state_icon_attack_down.png">1턴 동안 공격력 50% 감소</div>
+<div class="icon-line"><img src="img/common_icon_deffence_up.png">1턴 동안 방어력 1000배</div>
+<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">1턴 동안 받는 데미지를 50% 감소</div>
+<br>
+</body></html>
+<hr><h2><span style='color:#4d9aff'>[속] VS 링링</span><span style='color:#4d9aff'> (난입) </span></h2>
+<html>
+<head>
+<meta charset="UTF-8">
+<style>
+  body { background-color: #13514d; color: #f2f2f7; font-family: sans-serif; padding: 2em; font-size: 26px; }
+  img { height: 40px; vertical-align: middle; margin-right: 2px; }
+  h1 { font-size: 36px; color: gold; margin-bottom: 0.3em; }
+  h2 { solid #f2f2f7; padding-bottom: 0.3em; font-size: 30px; }
+  h3 { font-size: 28px; margin-top: 1em; }
+  .icon-line { display: flex; align-items: center; gap: 6px; margin-bottom: 4px; font-size: 24px; }
+  .label-initial { background-color: #267d4a; color: #f2f2f7; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
+  .label-preemptive { background-color: #24567a; color: #f2f2f7; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
+  .label-special { background-color: #aa8500; color: #fff; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
+  .label-death { background-color: #b71c1c; color: #fff; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
+  .label-interrupt { background-color: #6a1b9a; color: #fff; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
+  .label-after1turn { background-color: #6a1b9a; color: #fff; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
+</style>
+</head>
+<body>
+       <h1></h1>
+<h3>Stage 1:</h3>
+<span class="label-preemptive">선제 행동:</span><br>
+<div class="icon-line"><img src="img/characterbox_icon_vs.png">격투형, 박식형, 강인형 캐릭터의 VS 효과의 게이지를 5 단축</div>
+<div class="icon-line"><img src="img/common_change_charge.png">격투형, 박식형, 강인형 캐릭터의 슈퍼 체인지 효과를 5 단축</div>
+<div class="icon-line"><img src="img/common_special_charge.png">격투형, 박식형, 강인형 캐릭터의 필살기 턴을 5턴 단축</div>
 <div class="icon-line"><img src="img/common_run.png">도주</div>
 <br>
 <h3>Stage 2:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
 <div class="icon-line"><img src="img/popuptext_slot_obstacle.png">[공백][힘][기][속][심][지][G][고기][연][폭탄] 슬롯을 [방해] 슬롯으로 변환</div>
 <div class="icon-line"><img src="img/common_slot_lock.png">1턴 동안 슬롯 고정</div>
-<div class="icon-line"><img src="img/common_state_icon_attack_down.png">1턴 동안 공격력 50% 감소</div>
-<div class="icon-line"><img src="img/common_icon_burn.png">1턴 동안 3000 데미지의 화상</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">98턴 동안 일반 공격 이외의 데미지 1</div>
 <div class="icon-line"><img src="img/common_icon_mighty_guard_01.png">98턴 동안 지연 무효</div>
+<div class="icon-line"><img src="img/common_icon_deffence_up.png">1턴 동안 방어력 1000배</div>
 <br>
 <h3>Stage 3:</h3>
-<span class="label-initial" style="color:#87cefa">초기 상태: 나미</span><br>
-<div class="icon-line"><img src="img/common_weak_03.png">약점 타입: 타격형</div>
+<span class="label-initial" style="color:#87cefa">초기 상태: 샬롯 링링</span><br>
+<div class="icon-line"><img src="img/common_weak_01.png">약점 타입: 격투형</div>
 <span class="label-preemptive">선제 행동:</span><br>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">98턴 동안 일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_damagecut_icon.png">1턴 동안 10000을(를) 넘는 데미지를 90% 감소</div>
+<div class="icon-line"><img src="img/common_icon_chain_down.png">1턴 동안 체인 계수 증가량 0.1배</div>
 <div class="icon-line"><img src="img/common_icon_mighty_guard_01.png">98턴 동안 지연 무효</div>
-<div class="icon-line"><img src="img/common_special_bind.png">2턴 동안 필살기 봉쇄</div>
-<br>
-</body></html>
-<hr><h2><span style='color:#228B22'>[기] VS 행콕</span><span style='color:#228B22'> (난입) </span></h2>
-<html>
-<head>
-<meta charset="UTF-8">
-<style>
-  body { background-color: #13514d; color: #f2f2f7; font-family: sans-serif; padding: 2em; font-size: 26px; }
-  img { height: 40px; vertical-align: middle; margin-right: 2px; }
-  h1 { font-size: 36px; color: gold; margin-bottom: 0.3em; }
-  h2 { solid #f2f2f7; padding-bottom: 0.3em; font-size: 30px; }
-  h3 { font-size: 28px; margin-top: 1em; }
-  .icon-line { display: flex; align-items: center; gap: 6px; margin-bottom: 4px; font-size: 24px; }
-  .label-initial { background-color: #267d4a; color: #f2f2f7; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
-  .label-preemptive { background-color: #24567a; color: #f2f2f7; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
-  .label-special { background-color: #aa8500; color: #fff; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
-  .label-death { background-color: #b71c1c; color: #fff; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
-  .label-interrupt { background-color: #6a1b9a; color: #fff; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
-  .label-after1turn { background-color: #6a1b9a; color: #fff; padding: 2px 8px; border-radius: 12px; font-weight: bold; display: inline-block; margin-bottom: 6px; }
-</style>
-</head>
-<body>
-       <h1></h1>
-<h3>Stage 1:</h3>
-<span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/characterbox_icon_vs.png">타격형, 박식형, 강인형 캐릭터의 VS 효과의 게이지를 5 단축</div>
-<div class="icon-line"><img src="img/common_change_charge.png">타격형, 박식형, 강인형 캐릭터의 슈퍼 체인지 효과를 5 단축</div>
-<div class="icon-line"><img src="img/common_special_charge.png">타격형, 박식형, 강인형 캐릭터의 필살기 턴을 5턴 단축</div>
-<div class="icon-line"><img src="img/common_run.png">도주</div>
-<br>
-<h3>Stage 2:</h3>
-<span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_special_reverse.png">필살기 턴을 1턴 되돌리기</div>
-<div class="icon-line"><img src="img/common_icon_mighty_guard_04.png">98턴 동안 방어력 감소 무효</div>
-<div class="icon-line"><img src="img/common_bind.png">2턴 동안 중간단 봉쇄</div>
-<div class="icon-line"><img src="img/common_icon_burn.png">1턴 동안 3000 데미지의 화상</div>
-<br>
-<h3>Stage 3:</h3>
-<span class="label-initial" style="color:#87cefa">초기 상태: 보아 행콕</span><br>
-<div class="icon-line"><img src="img/common_weak_03.png">약점 타입: 타격형</div>
-<span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_palsy.png">3턴 동안 선원을 마비</div>
-<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">98턴 동안 일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">98턴 동안 상태이상 무효</div>
-<div class="icon-line"><img src="img/common_despair.png">3턴 동안 상단의 선장효과 무효</div>
+<div class="icon-line"><img src="img/common_guts_icon.png">1턴 동안 남은 체력 1로 버티기 효과</div>
 <br>
 </body></html>
 </body></html>
