--- a/KIZUNA.html
+++ b/KIZUNA.html
@@ -18,10 +18,8 @@
 
 <h1>유대결전 패턴</h1>
 <ul>
-<li><a href='KIZUNA_BOSS1.html' style='font-size:28px !important'>[일반보스] [힘] VS 나미&우솝</a></li>
-<li><a href='KIZUNA_BOSS2.html' style='font-size:28px !important'>[일반보스] [지] VS 나미&우솝</a></li>
-<li><a href='KIZUNA_SUPERBOSS1.html' style='font-size:28px !important'>[초보스] [힘] VS 나미&우솝</a></li>
-<li><a href='KIZUNA_SUPERBOSS2.html' style='font-size:28px !important'>[초보스] [심] VS 나미&우솝</a></li>
+<li><a href='KIZUNA_BOSS1.html' style='font-size:28px !important'>[일반보스] [기] VS 검은 수염</a></li>
+<li><a href='KIZUNA_BOSS2.html' style='font-size:28px !important'>[일반보스] [심] VS 검은 수염</a></li>
 </ul>
-<footer style="margin-top: 60px; font-size: 20px; color: #aaa;">최종 업데이트: 2025-10-10</footer>
+<footer style="margin-top: 60px; font-size: 20px; color: #aaa;">최종 업데이트: 2025-10-16</footer>
 </body></html>
