--- a/KIZUNA_BOSS1.html
+++ b/KIZUNA_BOSS1.html
@@ -17,79 +17,97 @@
 </style>
 </head>
 <body>
-       <h1>VS 나미&우솝</h1>
-       <div style="font-size: 32px; color: #f9f871; font-weight: bold; margin-bottom: 12px;"><span style="color:#ee0000; font-weight:bold;">일반보스</span> <span style="color:#ee0000; font-weight:bold;">[힘]</span></div>
+       <h1>VS 검은 수염</h1>
+       <div style="font-size: 32px; color: #f9f871; font-weight: bold; margin-bottom: 12px;"><span style="color:#258325; font-weight:bold;">일반보스</span> <span style="color:#258325; font-weight:bold;">[기]</span></div>
 <h3>Stage 1:</h3>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_special_charge.png">속 속성, 심 속성, 지 속성 캐릭터의 필살기 턴을 15턴 단축</div>
-<div class="icon-line"><img src="img/common_change_charge.png">속 속성, 심 속성, 지 속성 속성의 슈퍼 체인지 효과를 15 단축</div>
-<div class="icon-line"><img src="img/characterbox_icon_vs.png">속 속성, 심 속성, 지 속성 속성의 VS 효과의 게이지를 15 단축</div>
+<div class="icon-line"><img src="img/common_special_charge.png">힘 속성, 기 속성, 지 속성 캐릭터의 필살기 턴을 15턴 단축</div>
+<div class="icon-line"><img src="img/common_change_charge.png">힘 속성, 기 속성, 지 속성 속성의 슈퍼 체인지 효과를 15 단축</div>
+<div class="icon-line"><img src="img/characterbox_icon_vs.png">힘 속성, 기 속성, 지 속성 속성의 VS 효과의 게이지를 15 단축</div>
 <div class="icon-line"><img src="img/common_run.png">도주</div>
 <br>
 <h3>Stage 2:</h3>
+<span class="label-initial" style="color:#87cefa">초기 상태: 도크 Q</span><br>
+<div class="icon-line"><img src="img/common_icon_210.png">지연 이외의 상태이상 무효</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/popuptext_slot_poison.png">98턴 동안 서서히 데미지가 증가하는 독 데미지</div>
-<div class="icon-line"><img src="img/common_icon_210.png">적의 독 상태, 맹독 상태, 적의 서서히 데미지가 증가하는 독 데미지, 열상 이외의 상태이상 무효</div>
+<div class="icon-line"><img src="img/common_bind.png">5턴 동안 선원 봉쇄</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_icon_skill_limit.png">3턴 동안 필살기 사용 횟수 3회 제한</div>
-<div class="icon-line"><img src="img/common_guts_icon.png">2턴 동안 남은 체력 1로 버티기 효과</div>
+<div class="icon-line"><img src="img/popuptext_slot_poison.png">서서히 데미지가 증가하는 독 데미지</div>
+<div class="icon-line"><img src="img/common_damage.png">남은 체력의 25% 비율 데미지</div>
 <br>
 <h3>Stage 3:</h3>
 <div style="color: gold; font-weight: bold;">Lv1~Lv20의 경우</div>
-<span class="label-initial" style="color:#87cefa">초기 상태: 나미&우솝</span><br>
+<span class="label-initial" style="color:#87cefa">초기 상태: 검은 수염</span><br>
 <div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">상태이상 무효</div>
 <div class="icon-line"><img src="img/common_icon_death_invalid.png">격파(전투 불능)계의 필살기 무효</div>
 <div class="icon-line"><img src="img/common_icon_ratio_damagedown.png">비율 데미지 내성 100%</div>
-<div class="icon-line"><img src="img/common_weak_08.png">약점 타입: 강인형</div>
+<div class="icon-line"><img src="img/common_weak_06.png">약점 타입: 야심형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_bind.png">6턴 동안 하단 봉쇄</div>
+<div class="icon-line"><img src="img/common_icon_skill_limit.png">2턴 동안 필살기 사용 횟수 3회 제한</div>
+<div class="icon-line"><img src="img/common_icon_restore_zero.png">10턴 동안 회복 무효</div>
+<div class="icon-line"><img src="img/common_icon_251_skill.png">5턴 동안 15000 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
+<div class="icon-line"><img src="img/common_stun.png">하단은(는) 받는 데미지 3배의 기절</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_damage.png">일당의 서서히 데미지가 증가하는 독 데미지 해제</div>
-<div class="icon-line"><img src="img/common_state_icon_attack_down.png">3턴 동안 공격력 90% 감소</div>
-<div class="icon-line"><img src="img/common_icon_deffence_up.png">6턴 동안 방어력 100000배</div>
-<div class="icon-line"><img src="img/quest_combo_barrier_3.png">2턴 동안 탭 타이밍 배리어(PERFECT 2회)</div>
+<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">6턴 동안 받는 데미지를 90% 감소</div>
+<div class="icon-line"><img src="img/common_damagecut_icon.png">6턴 동안 1000을(를) 넘는 데미지를 90% 감소</div>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 아군이 일반 공격 이외의 데미지 1 상태가 아닐 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
+<div class="icon-line">횟수 무제한</div>
+<div class="icon-line"><img src="img/common_heal.png">체력을 전부 회복</div>
+<div class="icon-line"><img src="img/common_silence.png">99턴 동안 침묵</div>
+<div class="icon-line"><img src="img/common_del.png">유리 효과(초월 상태 포함), 축적치 해제</div>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
 <br>
 <h3>Stage 3:</h3>
 <div style="color: gold; font-weight: bold;">Lv21~Lv30의 경우</div>
-<span class="label-initial" style="color:#87cefa">초기 상태: 나미&우솝</span><br>
+<span class="label-initial" style="color:#87cefa">초기 상태: 검은 수염</span><br>
 <div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">상태이상 무효</div>
 <div class="icon-line"><img src="img/common_icon_death_invalid.png">격파(전투 불능)계의 필살기 무효</div>
 <div class="icon-line"><img src="img/common_icon_ratio_damagedown.png">비율 데미지 내성 100%</div>
-<div class="icon-line"><img src="img/common_weak_08.png">약점 타입: 강인형</div>
+<div class="icon-line"><img src="img/common_weak_06.png">약점 타입: 야심형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_bind.png">6턴 동안 하단 봉쇄</div>
+<div class="icon-line"><img src="img/common_icon_skill_limit.png">2턴 동안 필살기 사용 횟수 3회 제한</div>
+<div class="icon-line"><img src="img/common_icon_restore_zero.png">10턴 동안 회복 무효</div>
+<div class="icon-line"><img src="img/common_icon_251_skill.png">5턴 동안 15000 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
+<div class="icon-line"><img src="img/common_stun.png">하단은(는) 받는 데미지 3배의 기절</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_damage.png">일당의 서서히 데미지가 증가하는 독 데미지 해제</div>
-<div class="icon-line"><img src="img/common_state_icon_attack_down.png">3턴 동안 공격력 90% 감소</div>
-<div class="icon-line"><img src="img/common_icon_deffence_up.png">6턴 동안 방어력 100000배</div>
-<div class="icon-line"><img src="img/quest_combo_barrier_3.png">5턴 동안 탭 타이밍 배리어(PERFECT 3회)</div>
-<div class="icon-line"><img src="img/state_icon_invincible.png">1턴 동안 받는 데미지 무효</div>
+<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">8턴 동안 받는 데미지를 90% 감소</div>
+<div class="icon-line"><img src="img/common_damagecut_icon.png">6턴 동안 1000을(를) 넘는 데미지를 90% 감소</div>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 슬롯 영향 증폭</span><br>
+<div class="icon-line">1회까지</div>
+<div class="icon-line"><img src="img/quest_combo_barrier_3.png">83턴 동안 탭 타이밍 배리어(PERFECT 2회)</div>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 아군이 일반 공격 이외의 데미지 1 상태가 아닐 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
+<div class="icon-line">횟수 무제한</div>
+<div class="icon-line"><img src="img/common_heal.png">체력을 전부 회복</div>
+<div class="icon-line"><img src="img/common_silence.png">99턴 동안 침묵</div>
+<div class="icon-line"><img src="img/common_del.png">유리 효과(초월 상태 포함), 축적치 해제</div>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
 <br>
 <h3>Stage 3:</h3>
 <div style="color: gold; font-weight: bold;">Lv31~의 경우</div>
-<span class="label-initial" style="color:#87cefa">초기 상태: 나미&우솝</span><br>
+<span class="label-initial" style="color:#87cefa">초기 상태: 검은 수염</span><br>
 <div class="icon-line"><img src="img/common_icon_mighty_guard_00.png">상태이상 무효</div>
 <div class="icon-line"><img src="img/common_icon_death_invalid.png">격파(전투 불능)계의 필살기 무효</div>
 <div class="icon-line"><img src="img/common_icon_ratio_damagedown.png">비율 데미지 내성 100%</div>
-<div class="icon-line"><img src="img/common_weak_08.png">약점 타입: 강인형</div>
-<span class="label-preemptive" style="color:#87cefa">선제 행동: 일당의 체력이 80% 이하일 때</span><br>
-<div class="icon-line"><img src="img/common_special_reverse.png">선원의 필살기 턴을 6턴 되돌리기</div>
-<div class="icon-line"><img src="img/common_bind.png">6턴 동안 하단 봉쇄</div>
-<div class="icon-line"><img src="img/common_damage.png">일당의 서서히 데미지가 증가하는 독 데미지 해제</div>
-<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_state_icon_attack_down.png">3턴 동안 공격력 90% 감소</div>
-<div class="icon-line"><img src="img/common_icon_deffence_up.png">6턴 동안 방어력 100000배</div>
-<div class="icon-line"><img src="img/common_special_reverse.png">상단의 필살기 턴을 2턴 되돌리기</div>
-<div class="icon-line"><img src="img/common_stun.png">중간단은(는) 받는 데미지 3배의 기절</div>
-<div class="icon-line"><img src="img/quest_combo_barrier_3.png">8턴 동안 탭 타이밍 배리어(PERFECT 4회)</div>
-<div class="icon-line"><img src="img/state_icon_invincible.png">3턴 동안 받는 데미지 무효</div>
+<div class="icon-line"><img src="img/common_weak_06.png">약점 타입: 야심형</div>
 <span class="label-preemptive">선제 행동:</span><br>
-<div class="icon-line"><img src="img/common_bind.png">6턴 동안 하단 봉쇄</div>
+<div class="icon-line"><img src="img/common_icon_skill_limit.png">2턴 동안 필살기 사용 횟수 3회 제한</div>
+<div class="icon-line"><img src="img/common_icon_restore_zero.png">10턴 동안 회복 무효</div>
+<div class="icon-line"><img src="img/common_icon_251_skill.png">5턴 동안 15000 데미지의 화상(PERFECT 공격 시에 화상 데미지를 받음)</div>
+<div class="icon-line"><img src="img/common_stun.png">하단은(는) 받는 데미지 3배의 기절</div>
+<div class="icon-line"><img src="img/common_bind.png">5턴 동안 좌측 봉쇄</div>
 <div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
-<div class="icon-line"><img src="img/common_state_icon_attack_down.png">3턴 동안 공격력 90% 감소</div>
-<div class="icon-line"><img src="img/common_icon_deffence_up.png">6턴 동안 방어력 100000배</div>
-<div class="icon-line"><img src="img/common_special_reverse.png">선원의 필살기 턴을 3턴 되돌리기</div>
-<div class="icon-line"><img src="img/quest_combo_barrier_3.png">8턴 동안 탭 타이밍 배리어(PERFECT 4회)</div>
-<div class="icon-line"><img src="img/state_icon_invincible.png">3턴 동안 받는 데미지 무효</div>
+<div class="icon-line"><img src="img/common_icon_damagecut_dummy.png">8턴 동안 받는 데미지를 90% 감소</div>
+<div class="icon-line"><img src="img/common_damagecut_icon.png">6턴 동안 1000을(를) 넘는 데미지를 90% 감소</div>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 슬롯 영향 증폭</span><br>
+<div class="icon-line">1회까지</div>
+<div class="icon-line"><img src="img/quest_combo_barrier_3.png">83턴 동안 탭 타이밍 배리어(PERFECT 2회)</div>
+<span class="label-special" style="color:#87cefa">특수 끼어들기: 아군이 일반 공격 이외의 데미지 1 상태가 아닐 경우(필살기, 초월 필살기, VS 효과, 체인지/슈퍼 체인지 발동 후)</span><br>
+<div class="icon-line">횟수 무제한</div>
+<div class="icon-line"><img src="img/common_heal.png">체력을 전부 회복</div>
+<div class="icon-line"><img src="img/common_silence.png">99턴 동안 침묵</div>
+<div class="icon-line"><img src="img/common_del.png">유리 효과(초월 상태 포함), 축적치 해제</div>
+<div class="icon-line"><img src="img/common_icon_damage_onlyone.png">일반 공격 이외의 데미지 1</div>
+<span class="label-death">격파 시 행동:</span><br>
+<div class="icon-line"><img src="img/common_damage.png">108383 데미지</div>
 <br>
 </body></html>
